# kdrama_recomender

./: .gitignore  DATASET.md  README.md  cli.py  core.py  gui.py  kdramarecommender.py  pyproject.toml  sample_kdrama.csv  test_smoke.py
